[gd_scene load_steps=12 format=2]

[ext_resource path="res://addons/FontAwesome5/FontAwesome.gd" type="Script" id=1]
[ext_resource path="res://addons/FontAwesome5/fa-solid-900.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://tres/fonts/Ubuntu32_Normal.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui_elements/ButtonMainMenu.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]

[sub_resource type="DynamicFont" id=7]
size = 128
font_data = ExtResource( 2 )

[node name="Button" type="Button"]
margin_right = 264.0
margin_bottom = 264.0
rect_min_size = Vector2( 264, 264 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Button Name"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBx" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontAwesome" type="Label" parent="VBx"]
margin_top = 42.0
margin_right = 264.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 132, 64 )
custom_fonts/font = SubResource( 7 )
text = "ï€…"
align = 1
valign = 1
autowrap = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
icon_size = 128
icon_name = "star"

[node name="Label" type="Label" parent="VBx"]
margin_top = 185.0
margin_right = 264.0
margin_bottom = 222.0
custom_fonts/font = ExtResource( 3 )
text = "Button Name"
align = 1
autowrap = true

[node name="Tween" type="Tween" parent="."]

[connection signal="focus_entered" from="." to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Button_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
